--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 AuthType Basic
 AuthName "Password Protected Area"
-AuthUserFile /.htpassword
+AuthUserFile /iddwebsite/.htpassword
 Require Valid.user
